--- a/notasi matematika dua.tex
+++ b/notasi matematika dua.tex
@@ -1,5 +1,7 @@
 \documentclass[12pt]{article}
 
 \begin{document}
+	hello ini adalah pembagian $\frac{2}{4}$
 	
+	$$\frac{x}{x^2+4}$$
 \end{document}
